@@ -17,6 +17,8 @@ Version 0.5 (...)
   * Now supports a "safe load" mode, where exceptions aren't thrown.
   * Added unit tests for the Configuration class.
   * Added ability to retrieve converted integer and boolean option values.
+  * The options() method now returns an empty map if the section doesn't
+    exist, instead of throwing an exception.
 
 ---------------------------------------------------------------------------
 Version 0.4.2 (7 April, 2010)
